# mini-turtlebot

./: .gitignore  LICENSE  README.md
assets/: README.md
ci/: README.md
configs/: README.md
docker/: README.md
docs/: README.md  implementation.md  proposed_system.md
docs/architecture_diagrams/: system_architecture.mmd
examples/: README.md
examples/Arduino/: Example_2.ino  Example_4.ino  Example_5.ino  Example_8.ino  udp.py
examples/notebooks/: README.md
examples/scratch/: README.md
firmware/: README.md
firmware/esp32_nano/TB_ESP32/: platformio.ini
firmware/esp32_nano/TB_ESP32/src/: main.cpp
firmware_pico/: README.md
firmware_pico/src/: README.md
hardware/: README.md
hardware/bom/: BOM_atr_mini_turtlebot.csv  README.md
hardware/mech/: Battery_Base.stl  Battery_Top.stl  Frame.stl  Gear_Wheel.stl  README.md  Small Spacer.stl  Small_Gear12.stl  Spur Gear for wheel.stl
hardware/pcb/: README.md
hardware/power/: README.md
protocols/jsonl/: README.md  control_examples.jsonl  state_examples.jsonl
ros2_ws/: README.md
ros2_ws/src/scratch_bridge/: README.md
ros2_ws/src/tb_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/tb_bringup/: package.xml  setup.py
ros2_ws/src/tb_cam_client/: README.md
ros2_ws/src/tb_driver/: README.md
ros2_ws/src/tb_lidar_client/: README.md
ros2_ws/src/tb_msgs/: CMakeLists.txt  SetStreams.srv  package.xml
ros2_ws/src/tb_msgs/msg/: IRState.msg  MotorState.msg
ros2_ws/src/tb_msgs/srv/: SetStreams.srv
scripts/: README.md  ws_stub_server.py  ws_test_server.py
(+5 files in other folders)
